tests/NormalTests/paczka1/fuzzy1/41471035.err
Error in line 5: x1OOYL3ic A604 12,5
Error in line 22: yAmGQ A604 48,3
Error in line 33: qvTMaPE4IoE A19 18,3
Error in line 37: yAmGQ A552 4,4
